# user-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migration/: env.py
migration/versions/: 700bbb504c13_initial_schema.py
scripts/: deploy.sh  lint.sh  migrate.sh  run.sh  test.sh  test_helper.py
src/: main.py
src/auth/: dto.py  handler.py  service.py
src/common/: email.py  erri.py  resp.py  trap.py
src/conf/: config.py  db.py  logging.py  openapi.py  redis.py
src/invitation/: dto.py  handler.py  model.py  service.py
src/middleware/: auth.py  logging.py
src/tenant/: dto.py  handler.py  model.py  service.py
src/user/: dto.py  handler.py  model.py  service.py
tests/: cfg.yml  conftest.py
tests/integration/: conftest.py  test_auth_api.py  test_tenant_api.py  test_user_api.py
tests/unit/: test_auth_middleware.py  test_auth_service.py  test_dto.py  test_email.py  test_error.py  test_user_service.py
