[project]
name = "user-service"
version = "0.1.0"
description = "统一用户认证与管理服务"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "resend>=2.0.0",
    "loguru>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.20.0",
    "fakeredis>=2.21.0",
    "diff-cover>=9.0.0",
    "chardet<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
